# qrot

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  README_8md.html  annotated.html  annotated_dup.js  boost_8h.html  boost_8h.js  boost_8h__dep__incl.map  boost_8h__dep__incl.md5  boost_8h__incl.map  boost_8h__incl.md5  boost_8h_source.html  classes.html  classqrot_1_1AST-members.html  classqrot_1_1AST.html  classqrot_1_1AST.js  classqrot_1_1AST__coll__graph.map  classqrot_1_1AST__coll__graph.md5  classqrot_1_1Atom-members.html  classqrot_1_1Atom.html  classqrot_1_1Atom.js  classqrot_1_1CliffordDatabase-members.html  classqrot_1_1CliffordDatabase.html  classqrot_1_1CliffordDatabase.js  classqrot_1_1CliffordDatabase__coll__graph.map  classqrot_1_1CliffordDatabase__coll__graph.md5  classqrot_1_1ComplexRing-members.html  classqrot_1_1ComplexRing.html  classqrot_1_1ComplexRing.js  classqrot_1_1ComplexRing__coll__graph.map  classqrot_1_1ComplexRing__coll__graph.md5  classqrot_1_1Diophantine-members.html  classqrot_1_1Diophantine.html  classqrot_1_1Diophantine.js  classqrot_1_1Diophantine__coll__graph.map  classqrot_1_1Diophantine__coll__graph.md5  classqrot_1_1DyadicFraction-members.html  (+217 more)
cmake/: deps.cmake
examples/: CMakeLists.txt  gridsynth.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  (+109 more)
src/: CMakeLists.txt
src/qrot/: boost.h  decomposition.cpp  decomposition.h  diophantine.cpp  diophantine.h  gate.cpp  gate.h  geometry.cpp  geometry.h  grid_solver.cpp  grid_solver.h  matrix.cpp  matrix.h  number.cpp  number.h  parser.cpp  parser.h  s3.txt
tests/: CMakeLists.txt  decomposition.cpp  diophantine.cpp  gate.cpp  geometry.cpp  grid_solver.cpp  matrix.cpp  number.cpp  parser.cpp
(+1 files in other folders)
